# Cyborg-chain

./: Cargo.toml  README.md  phase2.md  rust-toolchain.toml
.devcontainer/: devcontainer.json
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/edge-connect/: Cargo.toml
pallets/edge-connect/src/: lib.rs
pallets/faucet/: Cargo.toml
pallets/faucet/src/: lib.rs
pallets/oracle/: Cargo.toml
pallets/oracle/runtime_api/: Cargo.toml
pallets/oracle/runtime_api/src/: lib.rs
pallets/oracle/src/: benchmarking.rs  mock.rs
pallets/rewards/: Cargo.toml  README.md
pallets/rewards/src/: lib.rs
pallets/worker-registration/: Cargo.toml  README.md
pallets/worker-registration/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
