[package]
authors = ['Steve Degosserie <steve@parity.io>']
description = 'A simple faucet pallet for Substrate-based PoA chains.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'APACHE-2.0'
name = 'pallet-faucet'
readme = 'README.md'
repository = 'https://github.com/stiiifff/pallet-faucet'
version = '1.0.3'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
parity-scale-codec = { version = "3.2.2", default-features = false, features = [
	"derive",
] }
# log = { workspace = true }
scale-info = { workspace = true }
# lite-json = { workspace = true }
serde = { version = '1.0.100', default-features = false, features = ['derive'] }
# serde_json = { version = '1.0.45', default-features = false, features = ['alloc'] }

frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'parity-scale-codec/std',
    'frame-support/std',
    'frame-system/std',
    'scale-info/std',
    'sp-runtime/std',
    'sp-std/std'
]
try-runtime = ['frame-support/try-runtime']

# [dev-dependencies.serde]
# version = '1.0.119'

# [dev-dependencies.sp-core]
# default-features = false
# git = 'https://github.com/paritytech/substrate.git'
# tag = 'monthly-2021-10'
# version = '4.0.0-dev'

# [dev-dependencies.sp-io]
# default-features = false
# git = 'https://github.com/paritytech/substrate.git'
# tag = 'monthly-2021-10'
# version = '4.0.0-dev'

[dev-dependencies.pallet-balances]
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-10'
version = '4.0.0-dev'



# [dependencies.codec]
# default-features = false
# features = ['derive']
# package = 'parity-scale-codec'
# version = '2.0.0'

# [dependencies.frame-benchmarking]
# default-features = false
# git = 'https://github.com/paritytech/substrate.git'
# optional = true
# tag = 'monthly-2021-10'
# version = '4.0.0-dev'

# [dependencies.frame-support]
# default-features = false
# git = 'https://github.com/paritytech/substrate.git'
# tag = 'monthly-2021-10'
# version = '4.0.0-dev'

# [dependencies.frame-system]
# default-features = false
# git = 'https://github.com/paritytech/substrate.git'
# tag = 'monthly-2021-10'
# version = '4.0.0-dev'

# [dependencies.scale-info]
# default-features = false
# features = ['derive']
# version = '1.0'



