[package]
name = "cyboracle-runtime-api"
version = "0.10.0"
authors = ["Cyborg Network <https://github.com/Cyborg-Network>"]
edition = "2021"
license = "Apache-2.0"
description = "Runtime API module for cyboracle."
repository = "https://github.com/Cyborg-Network/cyborg-chain/"

[dependencies]
parity-scale-codec = {  version = "3.0.0", default-features = false, features = ["derive"] }
sp-api = { workspace = true }
sp-std = { workspace = true }

[features]
default = [ "std" ]
std = [ "parity-scale-codec/std", "sp-api/std", "sp-std/std" ]